vlib/v/checker/tests/vweb_missing_result.out
vlib/net/http/http.v:169:3: warning: field `cookies` has been deprecated; use req.cookie(name) and req.add_cookie(name) instead
  167 |         data: config.data
  168 |         header: config.header
  169 |         cookies: config.cookies
      |         ~~~~~~~~~~~~~~~~~~~~~~~
  170 |         user_agent: config.user_agent
  171 |         user_ptr: config.user_ptr
vlib/net/http/request.v:323:3: warning: field `cookies` has been deprecated; use req.cookie(name) and req.add_cookie(name) instead
  321 |         host: header.get(.host) or { '' }
  322 |         version: version
  323 |         cookies: request_cookies
      |         ~~~~~~~~~~~~~~~~~~~~~~~~
  324 |     }
  325 | }
vlib/v/checker/tests/vweb_missing_result.vv:9:1: error: vweb actions must return `vweb.Result`
    7 | // actions must return results
    8 | @['/foo/:bar']
    9 | pub fn (mut app App) foo(a string) {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   10 | }
   11 |
